--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body{
-    padding: 50px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
     z-index: 0;
 }
 .row-header{
@@ -42,6 +42,11 @@ color:#E74C3C;
     right:5%;
     bottom:5%;
 }
+.rembutton{
+    position:fixed;
+    left:1%;
+    bottom:5%;
+}
 .header {
 list-style-type: none;
 margin: 0;
@@ -78,3 +83,37 @@ font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
     margin: 2px 2px;
   }
 .button1 {border-radius: 50%;}
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
