--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,8 @@ body{
     padding: 0px auto;   
 }
 .row-content{
-    margin: 0px auto;
-    padding: 50px 0px 50px 0px;
+    margin: 0px;
+    padding: 0px 0px 50px 0px;
     border-bottom: 2px ridge;
     min-height: 350px;
 }
@@ -68,7 +68,7 @@ font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
 }
 .footer{
     background-color: #F1C40F;
-    margin: 0px auto;
+    margin: 0px;
     padding: 20px 0px 20px 0px;
 }
 .button {
